# vscode-remote-webium

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
webium/: pyproject.toml
webium/tests/: __init__.py  test_base_page.py  test_type.py  test_webium.py
webium/tests/alert_page/: test_alerts.py  test_switch_to_new_window.py
webium/tests/pages/: simple_page.html
webium/tests/simple_page/: __init__.py  test_checkbox.py  test_click.py  test_dynamic_context.py  test_find_basic.py  test_is_element_present.py  test_jquery.py  test_link.py  test_logical_container.py  test_no_wait_decorator.py  test_physical_container.py
webium/tests/simple_page/finds/: test_finds.py
webium/webium/: base_page.py  driver.py  find.py  settings.py  windows_handler.py
webium/webium.egg-info/: PKG-INFO  SOURCES.txt
webium/webium/common/: by.py
webium/webium/config/: settings.py
webium/webium/controls/: click.py  webelement.py
webium/webium/core/: browser_launcher.py  download_helper.py  proxy_helper.py
webium/webium/extensions/: ReadMe.md
webium/webium/fixtures/: constants.py
webium/webium/jquery/: __init__.py
