[tool.poetry]
name = "webium"
version = "0.1.0"
description = ""
authors = ["jun <wandy1208@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "4.0.0a3"
waiting = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
